Contact page built out, still need to align items, get icons, add functionality for email and resume, and fix hover problem

--- a/portfolio/src/styles/_globals.scss
+++ b/portfolio/src/styles/_globals.scss
@@ -1,4 +1,4 @@
-$cream: #FFF8DC;
+$cream: #F5FFFA;
 $black: #000000;
 $hover-color: #0000CD;
 $fancy: "Apple Chancery";
